@@ -1,5 +1,6 @@
 <form method="post" id="prefs" name="prefs" action="<tag:action />">
 <tag:forminput />
+<input type="hidden" name="horde_prefs_token" value="<tag:token />" />
 <input type="hidden" id="actionID" name="actionID" value="update_prefs" />
 <input type="hidden" name="group" value="<tag:group />" />
 <input type="hidden" id="prefs_app" name="app" value="<tag:app />" />
